syntax = "proto3";
package rumgap;

import "manga.proto";
import "paginate.proto";

message ReadingPostRequest {
    int32 manga_id = 1;
}

message ReadingPatchRequest {
    int32 id = 1;
    int32 progress = 2;
}
