syntax = "proto3";
package rumgap.v1;

message FriendRequest {
    int32 user_id = 1;
}
